// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToCatalogButton /> check render with customClasses = testclass provided 1`] = `
<Link
  className="button button--solid testclass"
  to="/catalog"
>
  Back To Catalog
</Link>
`;

exports[`<ToCatalogButton /> check render without customClasses provided 1`] = `
<Link
  className="button button--solid "
  to="/catalog"
>
  Back To Catalog
</Link>
`;
